--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apilibri",
   "version": "1.0.0",
-  "description": "API REST PARA GERENCIA DE LIVROS.",
+  "description": "API REST PARA GERENCIA DE ROUPAS INFANTIS.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +20,14 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.4"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnaAlbuquerque28/PW2-projeto-api-Ana.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AnaAlbuquerque28/PW2-projeto-api-Ana/issues"
+  },
+  "homepage": "https://github.com/AnaAlbuquerque28/PW2-projeto-api-Ana#readme"
 }
